@@ -13,20 +13,17 @@
       A macro to include all necessary javascript files
     </tal:comment>
     <metal:openlayers define-macro="openlayers"
-                  tal:define="geosettings python:context.restrictedTraverse('@@geosettings-view');
-                              google_maps_js python:geosettings.google_maps_js">
+        tal:define="geosettings python:context.restrictedTraverse('@@geosettings-view')">
       <script type="text/javascript"
-              tal:condition="google_maps_js"
-              tal:attributes="src google_maps_js"></script>
+              tal:condition="geosettings/googlemaps"
+              tal:attributes="src geosettings/google_maps_js"></script>
       <script type="text/javascript"
               tal:condition="geosettings/bingmaps"
               tal:attributes="src geosettings/bing_maps_js"></script>
-      <tal:localization condition="context/@@collectivegeo-macros/localize">
+
+      <tal:localization condition="geosettings/localize">
         <script type="text/javascript"
-          tal:attributes="src context/@@collectivegeo-macros/language_file"
-          ></script>
-        <script type="text/javascript"
-          tal:content="context/@@collectivegeo-macros/language_script"
+          tal:attributes="src geosettings/language_file"
           ></script>
       </tal:localization>
     </metal:openlayers>
